fixed flexblox containers and aligned heder text with sign in button

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,17 +36,20 @@ html
 }
 body
 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 5em 1fr 1fr;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     
 
 }
 header 
 {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    float: right;
+    float: right; */
+    display: flex;
+    justify-content: right;
+    align-items: center;
 }
 #sign{
     margin-top: 10px;
@@ -86,6 +89,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
+height: 100%;
 }
 .overall{
     /*border: 1px solid red;*/
